# constructor-web-pjecz-gob-mx

./: pelicanconf.py  pyproject.toml  requirements.txt
content/citas/: citas.md
content/consultas/poder-en-linea/: poder-en-linea.md
content/css/: consultas-poder-en-linea.css
content/inicial/: inicial.html
content/js/: consultas-poder-en-linea.js
content/politicas-de-uso/: sitio-web.md
content/ponte-trucha/: ponte-trucha.md
themes/pjecz-2020-04/templates/: inicial-cabecera.html
themes/pjecz-2025-01/static/css/: pjecz.css
themes/pjecz-2025-01/templates/: navegacion-logotipo-redes.html  navegacion-menu.html
